New cleaner theme structure.
Former-commit-id: de96c3930cc65a8f70240a86189ea2b1a0cdbd4b

--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -44,7 +44,7 @@ set-option -g status-position top
 set-option -g status-utf8 on
 set-option -g status-justify right
 set-option -g status-bg "$defaultBG"
-set-option -g status-fg "$defautFG"
+set-option -g status-fg "$defaultFG"
 set-option -g status-interval 5
 set-option -g status-left-length 60
 set-option -g visual-activity on
