I'm bad at decisions
Former-commit-id: 7a871eeade5554392d0c455bdbc700b744e03926

--- a/home/termite/.config/termite/themes/solarized.config
+++ b/home/termite/.config/termite/themes/solarized.config
@@ -29,43 +29,45 @@ browser = chromium
 #modify_other_keys = false
 
 [colors]
+[colors]
+
 # special
-foreground      = #c7ccd1
-foreground_bold = #c7ccd1
-cursor          = #c7ccd1
-background      = #1c2023
+foreground      = #839496
+foreground_bold = #839496
+cursor          = #839496
+background      = #002b36
 
 # black
-color0  = #1c2023
-color8  = #747c84
+color0  = #073642
+color8  = #002b36
 
 # red
-color1  = #c7ae95
-color9  = #c7ae95
+color1  = #dc322f
+color9  = #cb4b16
 
 # green
-color2  = #95c7ae
-color10 = #95c7ae
+color2  = #859900
+color10 = #586e75
 
 # yellow
-color3  = #aec795
-color11 = #aec795
+color3  = #b58900
+color11 = #657b83
 
 # blue
-color4  = #ae95c7
-color12 = #ae95c7
+color4  = #268bd2
+color12 = #839496
 
 # magenta
-color5  = #c795ae
-color13 = #c795ae
+color5  = #d33682
+color13 = #6c71c4
 
 # cyan
-color6  = #95aec7
-color14 = #95aec7
+color6  = #2aa198
+color14 = #93a1a1
 
 # white
-color7  = #c7ccd1
-color15 = #f3f4f5
+color7  = #eee8d5
+color15 = #fdf6e3
 
 # 20% background transparency (requires a compositor)
 #background = rgba(63, 63, 63, 0.8)
