--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -6,6 +6,7 @@ bind-key C-s send-prefix
 # shell
 set -g default-command /bin/bash
 set -g default-shell /bin/bash
+set -s escape-time 0
 
 # winow/panel index's at 1:
 set -g base-index 1
