new theme, twilight, set browser to firefox in places
Former-commit-id: a2f2a3a5d6b71ede78ee8ab69e11212bce7b95fc

--- a/home/termite/.config/termite/themes/jellybean.config
+++ b/home/termite/.config/termite/themes/jellybean.config
@@ -20,7 +20,7 @@ cursor_blink = off
 cursor_shape = block
 
 # $BROWSER is used by default
-browser = chromium
+browser = firefox
 
 # set size hints for the window
 #size_hints = false
