--- a/home/termite/.config/termite/themes/ocean.config
+++ b/home/termite/.config/termite/themes/ocean.config
@@ -1,3 +1,4 @@
+#ocean
 [options]
 scroll_on_output = false
 scroll_on_keystroke = true
@@ -31,42 +32,42 @@ browser = firefox
 [colors]
 
 # special
-foreground      = #ffffff
-foreground_bold = #ffffff
-cursor          = #ffffff
-background      = #111111
+foreground      = #c0c5ce
+foreground_bold = #c0c5ce
+cursor          = #c0c5ce
+background      = #2b303b
 
 # black
-color0  = #222222
-color8  = #666666
+color0  = #2b303b
+color8  = #65737e
 
 # red
-color1  = #e84f4f
-color9  = #d23d3d
+color1  = #bf616a
+color9  = #d08770
 
 # green
-color2  = #b7ce42
-color10 = #bde077
+color2  = #a3be8c
+color10 = #343d46
 
 # yellow
-color3  = #fea63c
-color11 = #ffe863
+color3  = #ebcb8b
+color11 = #4f5b66
 
 # blue
-color4  = #66aabb
-color12 = #aaccbb
+color4  = #8fa1b3
+color12 = #a7adba
 
 # magenta
-color5  = #b7416e
-color13 = #e16a98
+color5  = #b48ead
+color13 = #dfe1e8
 
 # cyan
-color6  = #6d878d
-color14 = #42717b
+color6  = #96b5b4
+color14 = #ab7967
 
 # white
-color7  = #dddddd
-color15 = #cccccc
+color7  = #c0c5ce
+color15 = #eff1f5
 
 # 20% background transparency (requires a compositor)
 #background = rgba(63, 63, 63, 0.8)
