--- a/home/termite/.config/termite/themes/twilight.config
+++ b/home/termite/.config/termite/themes/twilight.config
@@ -1,3 +1,4 @@
+#ocean
 [options]
 scroll_on_output = false
 scroll_on_keystroke = true
@@ -7,7 +8,7 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Dejavu Sans Mono 10
+font = Droid Sans Mono 10
 scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
@@ -27,46 +28,46 @@ browser = firefox
 
 # emit escape sequences for other keys modified by Control
 #modify_other_keys = false
-
+#
 [colors]
 
 # special
-foreground      = #ffffff
-foreground_bold = #ffffff
-cursor          = #ffffff
-background      = #111111
+foreground      = #a7a7a7
+foreground_bold = #a7a7a7
+cursor          = #a7a7a7
+background      = #1e1e1e
 
 # black
-color0  = #222222
-color8  = #666666
+color0  = #1e1e1e
+color8  = #5f5a60
 
 # red
-color1  = #e84f4f
-color9  = #d23d3d
+color1  = #cf6a4c
+color9  = #cda869
 
 # green
-color2  = #b7ce42
-color10 = #bde077
+color2  = #8f9d6a
+color10 = #323537
 
 # yellow
-color3  = #fea63c
-color11 = #ffe863
+color3  = #f9ee98
+color11 = #464b50
 
 # blue
-color4  = #66aabb
-color12 = #aaccbb
+color4  = #7587a6
+color12 = #838184
 
 # magenta
-color5  = #b7416e
-color13 = #e16a98
+color5  = #9b859d
+color13 = #c3c3c3
 
 # cyan
-color6  = #6d878d
-color14 = #42717b
+color6  = #afc4db
+color14 = #9b703f
 
 # white
-color7  = #dddddd
-color15 = #cccccc
+color7  = #a7a7a7
+color15 = #ffffff
 
 # 20% background transparency (requires a compositor)
 #background = rgba(63, 63, 63, 0.8)
