--- a/home/termite/.config/termite/themes/zenburn.config
+++ b/home/termite/.config/termite/themes/zenburn.config
@@ -7,7 +7,7 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Dejavu Sans Mono 10
+font = Terminus 8
 scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
@@ -20,7 +20,7 @@ cursor_blink = off
 cursor_shape = block
 
 # $BROWSER is used by default
-browser = chromium
+browser = firefox
 
 # set size hints for the window
 #size_hints = false
