--- a/home/gtk/.config/gtk-3.0/settings.ini
+++ b/home/gtk/.config/gtk-3.0/settings.ini
@@ -1,12 +1,12 @@
 [Settings]
-gtk-theme-name=Zenburn
+gtk-theme-name=FlatStudioDark-Twilight
 gtk-icon-theme-name=Numix
-gtk-font-name=Terminus 10
+gtk-font-name=Droid Sans 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
+gtk-button-images=0
 gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
