--- a/home/compton/.config/compton.conf
+++ b/home/compton/.config/compton.conf
@@ -8,7 +8,7 @@ shadow-green = 0.0;
 shadow-blue = 0.0;
 
 ## transparent borders are pretty okay
-# frame-opacity = 0.5;
+frame-opacity = 0.7;
 
 ## Keep the shadows tight
 shadow = true;
