restyle tmux, add nvim esc :term, add nixers to irssi, add passmenu and keybind

--- a/home/mpd/.mpdcron/mpdcron.conf
+++ b/home/mpd/.mpdcron/mpdcron.conf
@@ -10,7 +10,7 @@ killwait = 2
 # 1: Info and below
 # 2: Debug and below
 loglevel = 0
-modules = notification
+modules = notification;scrobbler
 
 [mpd]
 # Semicolon delimited list of events to wait for.
@@ -57,4 +57,4 @@ journal_interval = 60
 [last.fm]
 url = http://post.audioscrobbler.com
 username = neeasade
-password = why would I commit my password
+password=fyur6PEbdV
