--- a/home/tmux/.tmux.conf
+++ b/home/tmux/.tmux.conf
@@ -8,30 +8,20 @@ set -g default-command /bin/bash
 set -g default-shell /bin/bash
 set -s escape-time 0
 
-# winow/panel index's at 1:
-set -g base-index 1
-set -g pane-base-index 1
-
 # screen mode
 set -g default-terminal "screen-256color"
+setw -g utf8 on
 
 # source config file
 bind r source-file ~/.tmux.conf
 
 # history
 set -g history-limit 4096
-
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg white
-
 # loud or quiet?
 set-option -g visual-activity off
 set-option -g visual-bell off
-set-option -g visual-content off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
-set-window-option -g monitor-content off
 set-option -g bell-action none
 
 # some key-binding changes
@@ -39,22 +29,43 @@ bind x kill-pane
 bind X next-layout
 bind Z previous-layout
 
+#{{{ Theme
+
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg white
+
+# window titles
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-bg black
+setw -g window-status-fg white
+setw -g window-status-current-bg white
+setw -g window-status-current-fg black
+setw -g window-status-current-attr bright
+
+# message colors
+set -g message-fg black
+set -g message-bg white
+set -g message-attr bright
+
 # Status Bar
 set-option -g status-position top
-set-option -g status-utf8 on
-set-option -g status-justify right
-set-option -g status-bg "$defaultBG"
-set-option -g status-fg "$defaultFG"
-set-option -g status-interval 5
-set-option -g status-left-length 60
-set-option -g visual-activity on
-set-window-option -g monitor-activity on
-set-window-option -g window-status-current-bg "$defaultBG"
-set-window-option -g window-status-current-fg "$activeFG"
-set-window-option -g window-status-bg "$defaultBG"
-set-window-option -g window-status-fg "$defaultFG"
+set -g status-bg default
+set -g status-fg default
+set -g status-attr bright
+set -g status-interval 5
+set -g status-justify centre
+set -g status-left-length 100
+set -g status-right-length 100
+set -g status-right ""
+set -g status-left ""
+set -g status-left ' #[fg=blue]#[bg=default][#H]#[default]'
+set -g status-right ' #[fg=blue]#[bg=default][#S]#[default]'
+#}}}
 
-### Vi options:
+
+#{{{ Vi options
 setw -g mode-keys vi
 set -g status-keys vi
 setw -g utf8 on
@@ -68,9 +79,9 @@ bind l select-pane -R
 # moving between windows with vim movement keys
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+# }}}
 
-
-### Mouse options:
+#{{{ Mouse options:
 # use mouse in copy mode
 setw -g mode-mouse on
 
@@ -80,3 +91,4 @@ set -g mouse-select-window on
 # resize panes with mouse (drag borders)
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
+#}}}
