testing password filters.

--- a/mpd/.mpdcron/mpdcron.conf
+++ b/mpd/.mpdcron/mpdcron.conf
@@ -56,5 +56,5 @@ journal_interval = 60
 
 [last.fm]
 url = http://post.audioscrobbler.com
-username = neeasade
-password=fyur6PEbdV
+username=neeasade
+password=replaceme
