--- a/ncmpcpp/.ncmpcpp/config
+++ b/ncmpcpp/.ncmpcpp/config
@@ -1,50 +1,36 @@
+# new conf
 visualizer_fifo_path = "/tmp/mpd.fifo"
 visualizer_output_name = "my_fifo"
 visualizer_sync_interval = "25"
 visualizer_in_stereo = "yes"
 visualizer_type = "spectrum" (spectrum/wave)
-#visualizer_look="⣿⡇"
-visualizer_look="++"
+visualizer_look = "∙▋"
+visualizer_color = "green"
 
+main_window_highlight_color = "white"
 
-# Playlist
-song_columns_list_format = "$L(9)[white]{l} (20)[red]{a} (30)[green]{b}$R(20)[cyan]{t}"
-# now_playing_prefix = "$b"
-#now_playing_subfix = "/$b"
-playlist_display_mode = "classic" (classic/columns)
-autocenter_mode = "no"
-centered_cursor = "no"
-cyclic_scrolling = "yes"
-mouse_list_scroll_whole_page = "no"
+progressbar_look = "▀▀ "
+progressbar_color = "black"
+progressbar_elapsed_color = "blue"
 
-song_library_format = "{%n > }{%t}|{%f}"
+song_list_format = " $1%a $5//$8 %t"
+#song_list_format = "$1• $8%t $1by $2%a$2 $R$1%l"
+#song_list_format = "$8 %t $R$8"
+song_status_format = " $2%a $4⟫$3⟫ $8%t $4⟫$3⟫ $5%b "
 
-# Bars
-song_status_format = "{%a - }{%t - }{%b}"
-#progressbar_look = "─╼"
-progressbar_look = "▪▪▫"
-titles_visibility = "no"
-header_visibility = "no"
-statusbar_visibility = "no"
+#now_playing_prefix = "$b$8»$2»$4»$3» "
+now_playing_prefix = "$b$2⟩$3⟩ "
+now_playing_suffix = "$8$/b"
 
-# Browser
-browser_playlist_prefix = "$2plist »$9 "
-browser_display_mode = "classic" (classic/columns)
+song_columns_list_format = "(5)[]{} (22)[red]{a} (20)[white]{t|f} (49)[blue]{b} (4)[red]{l}"
 
-
-# Others
-song_window_title_format = "MPD: {%a > }{%t}{ [%b{ Disc %d}]}|{%f}"
-search_engine_display_mode = "columns" (classic/columns)
-follow_now_playing_lyrics = "yes"
-#display_screens_numbers_on_start="no"
-
-#colors
-colors_enabled = yes
 color1 = "white"
-color2 = "green"
-progressbar_color = "cyan"
-progressbar_elapsed_color = "cyan"
-statusbar_color = "white"
-alternative_ui_separator_color = "black"
-active_column_color = "black"           ###
-visualizer_color = "magenta"
+color2 = "black"
+
+mouse_support = "yes"
+header_visibility = "no"
+statusbar_visibility = "yes"
+playlist_display_mode = "columns" (classic/columns)
+autocenter_mode = "yes"
+titles_visibility = "no"
+enable_window_title = "no"
