fix panel workspace bug, fix termite config I had replaced, add join/quit weechat triggers.
Former-commit-id: ce9a02d63ec40641d41b11b7d789677b183c3573

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -2,7 +2,7 @@
 ## based on dkeg 2015 'candy' config, with slight edits.
 
 ## Sometimes a little transparency can soften the edges
-shadow-opacity = 1;
+shadow-opacity = 0.4;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
@@ -11,7 +11,7 @@ shadow-blue = 0.0;
 frame-opacity = 0.5;
 
 ## Keep the shadows tight
-shadow = false;
+shadow = true;
 shadow-radius = 1;
 shadow-offset-x = 1;
 shadow-offset-y = 1;
