--- a/termite/.config/termite/themes/pyonium.config
+++ b/termite/.config/termite/themes/pyonium.config
@@ -28,45 +28,44 @@ cursor_shape = block
 #modify_other_keys = false
 
 [colors]
-[colors]
 
 # special
-foreground      = #303030
-foreground_bold = #303030
-cursor          = #303030
-background      = #f5f5f5
+foreground      = #ffffff
+foreground_bold = #ffffff
+cursor          = #ffffff
+background      = #111111
 
 # black
-color0  = #151515
-color8  = #505050
+color0  = #222222
+color8  = #666666
 
 # red
-color1  = #fb9fb1
-color9  = #fb9fb1
+color1  = #e84f4f
+color9  = #d23d3d
 
 # green
-color2  = #acc267
-color10 = #acc267
+color2  = #b7ce42
+color10 = #bde077
 
 # yellow
-color3  = #ddb26f
-color11 = #ddb26f
+color3  = #fea63c
+color11 = #ffe863
 
 # blue
-color4  = #6fc2ef
-color12 = #6fc2ef
+color4  = #66aabb
+color12 = #aaccbb
 
 # magenta
-color5  = #e1a3ee
-color13 = #e1a3ee
+color5  = #b7416e
+color13 = #e16a98
 
 # cyan
-color6  = #12cfc0
-color14 = #12cfc0
+color6  = #6d878d
+color14 = #42717b
 
 # white
-color7  = #d0d0d0
-color15 = #f5f5f5
+color7  = #dddddd
+color15 = #cccccc
 
 # 20% background transparency (requires a compositor)
 #background = rgba(63, 63, 63, 0.8)
