--- a/weechat/.weechat/trigger.conf
+++ b/weechat/.weechat/trigger.conf
@@ -31,6 +31,20 @@ cmd_pass.enabled = on
 cmd_pass.hook = modifier
 cmd_pass.regex = "==^((/(msg|m|quote) +nickserv +(id|identify|register|ghost +[^ ]+|release +[^ ]+|regain +[^ ]+) +)|/oper +[^ ]+ +|/quote +pass +|/set +[^ ]*password[^ ]* +|/secure +(passphrase|decrypt|set +[^ ]+) +)(.*)==${re:1}${hide:*,${re:+}}"
 cmd_pass.return_code = ok
+irc_join.arguments = "2000|weechat_print"
+irc_join.command = ""
+irc_join.conditions = "${tg_tags} =~ ,irc_join,"
+irc_join.enabled = on
+irc_join.hook = modifier
+irc_join.regex = "/.*[^(]\((.*)\).*/${color:darkgray}${tg_tag_nick}"
+irc_join.return_code = ok
+irc_quit.arguments = "2000|weechat_print"
+irc_quit.command = ""
+irc_quit.conditions = "${tg_tags} =~ ,irc_quit,"
+irc_quit.enabled = on
+irc_quit.hook = modifier
+irc_quit.regex = "/.*[^(]\((.*)\).*\ (\(.*\))/${color:darkgray}${tg_tag_nick}"
+irc_quit.return_code = ok
 msg_auth.arguments = "5000|irc_message_auth"
 msg_auth.command = ""
 msg_auth.conditions = ""
