clean up bin dir, make gtkrc-reload and colort set for the setup.sh script.
Former-commit-id: a83e42cb7dba3034300c9bf6b2b3f44ad1d55d81
Former-commit-id: 126e7ada9277d76f98f0f03ee662527df0ff4736

--- a/bin/bin/.gtkreload/Makefile
+++ b/bin/bin/.gtkreload/Makefile
@@ -8,7 +8,7 @@ CFLAGS=`pkg-config --cflags --libs gdk-2.0`
 all: $(BIN)
 
 $(BIN):
-	@$(CC) $(BIN).c $(CFLAGS) -o $(BIN)
+	@$(CC) $(BIN).c $(CFLAGS) -o ../$(BIN)
 
 install:
 	mkdir -p $(DESTDIR)$(BINDIR)
