modified:   bspwm/.config/bspwm/themes/chalk.bspwm_theme 	modified:   termite/.config/termite/themes/chalk.config
Former-commit-id: c512f413459b035eba757315f7f54779958a0ed3
Former-commit-id: 73adaea6acdf5c119825c7c1b57b9e4e22d5a7b9

--- a/termite/.config/termite/themes/chalk.config
+++ b/termite/.config/termite/themes/chalk.config
@@ -67,3 +67,18 @@ color14 = #2ea89a
 color7  = #383838
 color15 = #626262
 
+# if unset, will reverse foreground and background
+#highlight = #2f2f2f
+
+[hints]
+#font = Dejavu Sans Mono 12
+#foreground = #dcdccc
+#background = #3f3f3f
+#active_foreground = #e68080
+#active_background = #3f3f3f
+#padding = 2
+#border = #3f3f3f
+#border_width = 0.5
+#roundness = 2.0
+
+# vim: ft=dosini cms=#%s
