--- a/weechat/.weechat/trigger.conf
+++ b/weechat/.weechat/trigger.conf
@@ -36,14 +36,21 @@ irc_join.command = ""
 irc_join.conditions = "${tg_tags} =~ ,irc_join,"
 irc_join.enabled = on
 irc_join.hook = modifier
-irc_join.regex = "/.*[^(]\((.*)\).*/${color:darkgray}${tg_tag_nick}"
+irc_join.regex = "/.*[^(]\((.*)\).*/${color:darkgray}${tg_tag_nick} /tg_message_nocolor /.*/${tg_prefix}\t${tg_message_nocolor}"
 irc_join.return_code = ok
+irc_part.arguments = "2000|weechat_print"
+irc_part.command = ""
+irc_part.conditions = "${tg_tags} =~ ,irc_part,"
+irc_part.enabled = on
+irc_part.hook = modifier
+irc_part.regex = "/.*[^(]\((.*)\).*\ (.*)/${color:darkgray}${tg_tag_nick} /tg_message_nocolor /.*/${tg_prefix}\t${tg_message_nocolor}"
+irc_part.return_code = ok
 irc_quit.arguments = "2000|weechat_print"
 irc_quit.command = ""
 irc_quit.conditions = "${tg_tags} =~ ,irc_quit,"
 irc_quit.enabled = on
 irc_quit.hook = modifier
-irc_quit.regex = "/.*[^(]\((.*)\).*\ (\(.*\))/${color:darkgray}${tg_tag_nick}"
+irc_quit.regex = "/.*[^(]\((.*)\).*\ (\(.*\))/${color:darkgray}${tg_tag_nick} /tg_message_nocolor /.*/${tg_prefix}\t${tg_message_nocolor}"
 irc_quit.return_code = ok
 msg_auth.arguments = "5000|irc_message_auth"
 msg_auth.command = ""
