--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -85,8 +85,8 @@ paste_bracketed_timer_delay = 10
 paste_max_lines = 1
 prefix_action = " *"
 prefix_align = right
-prefix_align_max = 12
-prefix_align_min = 12
+prefix_align_max = 8
+prefix_align_min = 8
 prefix_align_more = "+"
 prefix_align_more_after = on
 prefix_buffer_align = right
@@ -94,25 +94,25 @@ prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
 prefix_error = "=!="
-prefix_join = "join"
+prefix_join = "▸"
 prefix_network = "--"
-prefix_quit = "quit"
+prefix_quit = "◂"
 prefix_same_nick = ""
-prefix_suffix = "│"
+prefix_suffix = "▌"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = ""
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "─"
+read_marker_string = "▿  "
 save_config_on_exit = on
 save_layout_on_exit = none
 scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
-separator_horizontal = "-"
-separator_vertical = ""
+separator_horizontal = "━"
+separator_vertical = "┃"
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
@@ -132,16 +132,16 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = green
-chat_highlight = yellow
-chat_highlight_bg = magenta
+chat_highlight = white
+chat_highlight_bg = default
 chat_host = cyan
-chat_inactive_buffer = default
-chat_inactive_window = default
+chat_inactive_buffer = cyan
+chat_inactive_window = cyan
 chat_nick = lightcyan
-chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue"
+chat_nick_colors = "cyan"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
-chat_nick_offline_highlight_bg = blue
+chat_nick_offline_highlight_bg = default
 chat_nick_other = cyan
 chat_nick_prefix = green
 chat_nick_self = white
@@ -155,7 +155,7 @@ chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = lightred
 chat_prefix_suffix = green
-chat_read_marker = white
+chat_read_marker = blue
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
@@ -171,7 +171,7 @@ input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
 nicklist_offline = blue
-separator = white
+separator = blue
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -232,7 +232,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = right
 buffers.priority = 0
@@ -241,13 +241,13 @@ buffers.size = 0
 buffers.size_max = 0
 buffers.type = window
 input.color_bg = default
-input.color_delim = cyan
+input.color_delim = blue
 input.color_fg = default
 input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "[input_search],[input_paste],             └─,input_text"
+input.items = "[input_search],[input_paste],         ▙,input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
@@ -288,7 +288,7 @@ title.color_fg = default
 title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
-title.hidden = off
+title.hidden = on
 title.items = "buffer_title"
 title.position = top
 title.priority = 500
