Change prompt, weechat, many touchups, update readme.
Former-commit-id: 121ceba1b8478f7bc2d756f58a6097f853386e52
Former-commit-id: af6b8e76a6370c5e1c8c5d1d9135fa3bacd5d892

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,6 @@ set -s escape-time 0
 
 # screen mode
 set -g default-terminal "screen-256color"
-setw -g utf8 on
 
 # source config file
 bind r source-file ~/.tmux.conf
@@ -26,8 +25,6 @@ set-option -g bell-action none
 
 # some key-binding changes
 bind x kill-pane
-bind X next-layout
-bind Z previous-layout
 
 #{{{ Theme
 
@@ -35,33 +32,26 @@ bind Z previous-layout
 set -g pane-border-fg black
 set -g pane-active-border-fg white
 
-# window titles
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-bg black
-setw -g window-status-fg white
-setw -g window-status-current-bg white
-setw -g window-status-current-fg black
+setw -g window-status-current-format '▄▄'
+setw -g window-status-format '▄▄'
+setw -g window-status-bg default
+setw -g window-status-fg blue
+setw -g window-status-current-bg default
+setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
 # message colors
-set -g message-fg black
-set -g message-bg white
+set -g message-fg white
+set -g message-bg default
 set -g message-attr bright
 
 # Status Bar
-set-option -g status-position top
+set-option -g status-position bottom
 set -g status-bg default
 set -g status-fg default
-set -g status-attr bright
-set -g status-interval 5
-set -g status-justify centre
-set -g status-left-length 100
-set -g status-right-length 100
-set -g status-right ""
-set -g status-left ""
-set -g status-left ' #[fg=blue]#[bg=default][#H]#[default]'
-set -g status-right ' #[fg=blue]#[bg=default][#S]#[default]'
+set -g status-justify right
+set -g status-left ''
+set -g status-right ''
 #}}}
 
 
@@ -82,13 +72,5 @@ bind -r C-l select-window -t :+
 # }}}
 
 #{{{ Mouse options:
-# use mouse in copy mode
-setw -g mode-mouse on
-
-# with mouse (click on pretty little boxes)
-set -g mouse-select-window on
-
-# resize panes with mouse (drag borders)
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set-option -g -q mouse on
 #}}}
