--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -87,16 +87,16 @@ prefix_action = " *"
 prefix_align = right
 prefix_align_max = 8
 prefix_align_min = 8
-prefix_align_more = "+"
+prefix_align_more = "…"
 prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
 prefix_error = "=!="
-prefix_join = "▸"
+prefix_join = "▶"
 prefix_network = "--"
-prefix_quit = "◂"
+prefix_quit = "◀"
 prefix_same_nick = ""
 prefix_suffix = "▌"
 quote_nick_prefix = "<"
@@ -144,17 +144,17 @@ chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = default
 chat_nick_other = cyan
 chat_nick_prefix = green
-chat_nick_self = white
+chat_nick_self = gray
 chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = brown
-chat_prefix_buffer_inactive_buffer = default
+chat_prefix_buffer_inactive_buffer = darkgray
 chat_prefix_error = yellow
-chat_prefix_join = lightgreen
+chat_prefix_join = darkgray
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
-chat_prefix_quit = lightred
-chat_prefix_suffix = green
+chat_prefix_quit = darkgray
+chat_prefix_suffix = blue
 chat_read_marker = blue
 chat_read_marker_bg = default
 chat_server = brown
@@ -232,7 +232,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = off
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = right
 buffers.priority = 0
