--- a/weechat/.weechat/buffers.conf
+++ b/weechat/.weechat/buffers.conf
@@ -17,7 +17,7 @@ hotlist_private_bg = default
 hotlist_private_fg = lightgreen
 none_channel_bg = default
 none_channel_fg = default
-number = blue
+number = default
 number_char = lightgreen
 prefix_bufname = default
 queries_default_bg = default
@@ -57,14 +57,14 @@ mouse_move_buffer = on
 mouse_wheel = on
 name_crop_suffix = "+"
 name_size_max = 0
-number_char = "."
+number_char = ""
 prefix = off
 prefix_bufname = ""
-prefix_empty = on
+prefix_empty = off
 prefix_for_query = ""
 short_names = on
 show_lag = off
-show_number = on
+show_number = off
 sort = number
 suffix_bufname = ""
 toggle_bar = on
