--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -232,7 +232,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = right
 buffers.priority = 0
