Add zenburn to generation, include a trick to not show shadow on that panel.
Former-commit-id: 00cf09b98bdb92fc8684c9f753d0b3dadf9204bd
Former-commit-id: b742d26a335e8f8a8efb0f4bab7ee76bd0d00ca4

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -17,6 +17,9 @@ shadow-offset-x = 1;
 shadow-offset-y = 1;
 no-dock-shadow = false;
 no-dnd-shadow = true;
+shadow-exclude = [
+	"name = 'zenburn'"
+];
 
 ## Soften the window and workspace changes
 fading = true;
