siji icons finish.
Former-commit-id: 11df6b510cb1013b681232e7478f5a463b7ac0b4
Former-commit-id: 48ac09175fc84808b5fc5a53ead6d5db55b770e8

--- a/termite/.config/termite/themes/jellybean.config
+++ b/termite/.config/termite/themes/jellybean.config
@@ -7,7 +7,7 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Terminus 8
+font = Tewi 8
 scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
