--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -18,7 +18,7 @@ shadow-offset-y = 1;
 no-dock-shadow = false;
 no-dnd-shadow = true;
 shadow-exclude = [
-	"name = 'zenburn'"
+	"name = 'noshadow'"
 ];
 
 ## Soften the window and workspace changes
