weechat bump/plugins and misc
Former-commit-id: f1834e51423909a35218e25a8dfd2b46c16d10e3
Former-commit-id: 7cb96e8ff873e60cc132d6fece973ad5cf531d9c

--- a/weechat/.weechat/buffers.conf
+++ b/weechat/.weechat/buffers.conf
@@ -22,10 +22,10 @@ number_char = lightgreen
 prefix_bufname = default
 queries_default_bg = default
 queries_default_fg = default
-queries_highlight_bg = default
-queries_highlight_fg = default
-queries_message_bg = default
-queries_message_fg = default
+queries_highlight_bg = white
+queries_highlight_fg = black
+queries_message_bg = white
+queries_message_fg = black
 suffix_bufname = default
 whitelist_default_bg = default
 whitelist_default_fg = default
