combine all the gitignores, make a meta folder.
Former-commit-id: 8adea29d91af6fd4aa171db81fe61c784d1d47f7
Former-commit-id: dbdd7f500a1b8d34ff60f19892a1ebead995c589

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-*conflictFiles
 nohup.out
+
+bin/bin/colort
+bin/bin/gtkrc-reload
+
+gtk/.config/gtk-3.0/bookmarks
+gtk/.config/gtk-3.0/settings.ini
+gtk/.themes/oomox-*
+
+mpd/.config/mpd/pid
+mpd/.config/mpd/log
+mpd/.config/mpd/state
+mpd/.config/mpd/sticker.sql
+mpd/.config/mpd/database
+mpd/.config/mpd/mpdcron.pid
+
+ncmpcpp/.ncmpcpp/error.log
+
+vim/.vim/.netrwhist
+vim/.vim/plugged
+
+weechat/.weechat/irc.conf
+weechat/.weechat/logs
+weechat/.weechat/*fifo
+weechat/.weechat/weechat.log
+weechat/.weechat/script/plugins.xml.gz
