--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -298,6 +298,9 @@ title.size_max = 0
 title.type = window
 
 [layout]
+_zoom.window = "1;0;50;1;-;-"
+_zoom.window = "2;1;0;0;irc;rizon.#rice"
+_zoom.window = "3;1;0;0;irc;rizon.#code"
 
 [notify]
 
