--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-s
 bind-key C-s send-prefix
 
 # shell
-set -g default-command /bin/bash
-set -g default-shell /bin/bash
+set -g default-command /bin/mksh
+set -g default-shell /bin/mksh
 set -s escape-time 0
 
 # screen mode
