scripts are now aur packages, compton speed, qutebrowser default website bg should always be white, minor sxhkdrc condense.
Former-commit-id: b1fb0d190761ee56780e586c07463c585fc2ed5b
Former-commit-id: 1cc7b7c4bad68952103d153fe04079acbaba738f

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf.template
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf.template
@@ -1296,8 +1296,7 @@ downloads.fg.system = rgb
 downloads.bg.system = rgb
 downloads.fg.error = white
 downloads.bg.error = red
-webpage.bg = ${completion.bg}
-#webpage.fg = ${completion.fg}
+webpage.bg = white
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
