--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -136,7 +136,7 @@ chat_highlight = white
 chat_highlight_bg = default
 chat_host = cyan
 chat_inactive_buffer = cyan
-chat_inactive_window = cyan
+chat_inactive_window = darkgray
 chat_nick = lightcyan
 chat_nick_colors = "cyan"
 chat_nick_offline = default
