Amend ignore, deploy fix.
Former-commit-id: e34e60abcff84ae223ad5e138a31b4cbb22b38d8
Former-commit-id: 886cd047dca878f5cfb952f5b3ce41fc9467c135

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ weechat/.weechat/logs
 weechat/.weechat/*fifo
 weechat/.weechat/weechat.log
 weechat/.weechat/script/plugins.xml.gz
+
+qutebrowser/.config/qutebrowser/bookmarks
+qutebrowser/.config/qutebrowser/keys.conf
+qutebrowser/.config/qutebrowser/quickmarks
+qutebrowser/.config/qutebrowser/qutebrowser.conf
