weechat updoot and gitignore
Former-commit-id: df32974e15da703baafc68e838c5ab6ee125d222
Former-commit-id: d8f3678d9c59c387fd4b73a5d9f47dd150fa5376

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ qutebrowser/.config/qutebrowser/bookmarks
 qutebrowser/.config/qutebrowser/keys.conf
 qutebrowser/.config/qutebrowser/quickmarks
 qutebrowser/.config/qutebrowser/qutebrowser.conf
+qutebrowser/.config/qutebrowser/qsettings
