autopull vim plug, ignore anything that isn't colors. Thanks @DanielFGray
Former-commit-id: 063932b076753d4be76c3de4007dc6c2b5509c71
Former-commit-id: 656f2813df7c8233a6dae51feda6b91520bb06d8

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ mpd/.config/mpd/mpdcron.pid
 
 ncmpcpp/.config/ncmpcpp/error.log
 
-vim/.vim/.netrwhist
-vim/.vim/plugged
+vim/.vim/*
+!vim/.vim/colors
 
 weechat/.weechat/irc.conf
 weechat/.weechat/logs
