Start of templating, switch terms, better weechat log format.
Former-commit-id: 04a39f6e7036526aa4022a500481c6a4e2eedbd1
Former-commit-id: 3494708b413a429bd4eda42c3ae637fdb54edbff

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -25,6 +25,9 @@ shadow-exclude = [
 fading = true;
 fade-in-step = 0.18;
 fade-out-step = 0.18;
+fade-exclude = [
+	"name = 'lemonbar'"
+];
 
 ## Extras
 use-ewmh-active-win = false;
