--- a/weechat/.weechat/logger.conf
+++ b/weechat/.weechat/logger.conf
@@ -13,7 +13,7 @@ backlog_line = default
 auto_log = on
 flush_delay = 120
 info_lines = off
-mask = "$plugin.$name.weechatlog"
+mask = "%Y/%m/$plugin.$name.weechatlog"
 name_lower_case = on
 nick_prefix = ""
 nick_suffix = ""
