use templating much heavier, nvim link, vim colors from repos, use oomox from aur package.
Former-commit-id: 11f5a077adbcdde54b5be275f975ded4c05786a7
Former-commit-id: 1d3bccc2606f46b9e1cbe7ead80ccae68aa3315f

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ mpd/.config/mpd/mpdcron.pid
 ncmpcpp/.config/ncmpcpp/error.log
 
 vim/.vim/*
-!vim/.vim/colors
+vim/.config/nvim/*
+!vim/.config/nvim/init.vim
 
 weechat/.weechat/irc.conf
 weechat/.weechat/logs
