--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,14 +8,16 @@ set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 set -s escape-time 0
 
-# screen mode
-set -g default-terminal "screen-256color"
+# set st, enable tru color via flag.
+set -g default-terminal "st-256color"
+set -ga terminal-overrides ",st-256color:Tc"
 
 # source config file
 bind r source-file ~/.tmux.conf
 
 # history
 set -g history-limit 4096
+
 # loud or quiet?
 set-option -g visual-activity off
 set-option -g visual-bell off
@@ -58,7 +60,6 @@ set -g status-right ''
 #{{{ Vi options
 setw -g mode-keys vi
 set -g status-keys vi
-setw -g utf8 on
 
 # moving between panes with vim movement keys
 bind h select-pane -L
