don't keep weechat plugins in repo.
Former-commit-id: f950b27d3e936492d0f2645f17e0428f7cc9d131
Former-commit-id: 0b9c180587a4fd765f00f78aadf18b6049c35cdf

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ nohup.out
 
 wm/.wm/timestamp
 
-gtk/.themes/oomox-*
-
 mpd/.config/mpd/pid
 mpd/.config/mpd/log
 mpd/.config/mpd/state
@@ -23,6 +21,8 @@ weechat/.weechat/logs
 weechat/.weechat/*fifo
 weechat/.weechat/weechat.log
 weechat/.weechat/script/plugins.xml.gz
+weechat/.weechat/perl
+weechat/.weechat/python
 
 qutebrowser/.config/qutebrowser/bookmarks
 qutebrowser/.config/qutebrowser/keys.conf
