sync vim tmux binds, have resize.sh work on groups of nodes.
Former-commit-id: 4a70b10287969ed47ed276514fc36247633041bd
Former-commit-id: fcd1728c9aeaf3f6f038a8a130b974bb453b1223

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,6 @@
-# change prefix to Ctrl-s (Nice placement with vi keys, not conflict with screen)
 unbind C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # shell
 set -g default-command /bin/zsh
@@ -57,21 +56,12 @@ set -g status-right ''
 #}}}
 
 
-#{{{ Vi options
-setw -g mode-keys vi
-set -g status-keys vi
-
 # moving between panes with vim movement keys
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# moving between windows with vim movement keys
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-# }}}
-
-#{{{ Mouse options:
 set-option -g -q mouse on
-#}}}
