add paper theme.
Former-commit-id: 3a5fd66a579a614bac38e453c771ed035db9c7c8
Former-commit-id: 8aa1336f1a8e2600bd3c813a3a2228fbe53c63e6

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -22,7 +22,7 @@ shadow-exclude = [
 ];
 
 ## Soften the window and workspace changes
-fading = true;
+fading = false;
 fade-in-step = 0.1;
 fade-out-step = 0.1;
 fade-exclude = [
