--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -8,7 +8,7 @@ shadow-green = 0.0;
 shadow-blue = 0.0;
 
 ## transparent borders are pretty okay
-frame-opacity = 0.8;
+#frame-opacity = 0.8;
 
 ## Keep the shadows tight
 shadow = true;
