remove theme_perf.txt, ignore it.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ nohup.out
 wm/.wm/panel/juicers/
 wm/.wm/panel/logs
 wm/.wm/timestamp
+wm/.wm/scripts/theming/theme_perf.txt
 
 mpd/.config/mpd/pid
 mpd/.config/mpd/log
