have dzen dropdowns snap to panel edge dimentions

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ nohup.out
 
 wm/.wm/panel/juicers/
 wm/.wm/panel/logs
+wm/.wm/panel/tools/icon
 wm/.wm/timestamp
 wm/.wm/scripts/theming/theme_perf.txt
 
