track develop branch of spacemacs, submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "walls"]
 	path = wm/.wm/walls
 	url = http://code.neeasade.net/walls
+[submodule "emacs/.emacs.d"]
+	path = emacs/.emacs.d
+	url = https://github.com/syl20bnr/spacemacs/
+	branch = develop
