--- a/tools/.gitconfig
+++ b/tools/.gitconfig
@@ -1,5 +1,4 @@
-[user]
-	email = nathanisom27@gmail.com
-	name = neeasade
 [url "git@github.com:"]
 	pushInsteadOf = "https://github.com/"
+[credential]
+	helper = cache --timeout 36000
