--- a/i3/.config/sway/config
+++ b/i3/.config/sway/config
@@ -11,21 +11,23 @@ set $mod Mod4
 # Despite the name, also works for non-floating windows.
 # Change normal to inverse to use left mouse button for resizing and right
 # mouse button for dragging.
-floating_modifier $mod normal
+# floating_modifier $mod normal
 
 bar {
     position top
     height 30
+    # status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
+    status_command date
+}
 
-    status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
 
     # how do these colors work??
-    colors {
-	statusline #ffffff
-	background #323232
-	inactive_workspace #32323200 #32323200 #5c5c5c
-    }
-}
+    # colors {
+	# statusline #ffffff
+	# background #323232
+	# inactive_workspace #32323200 #32323200 #5c5c5c
+    # }
+# }
 
 exec_always $HOME/.config/wm/swayrc
 
@@ -65,3 +67,86 @@ exec_always $HOME/.config/wm/swayrc
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+bindsym Mod4+w  kill
+bindsym Mod4+s  floating toggle
+bindsym Mod4+shift+s exec nfloat
+bindsym Mod4+shift+f  fullscreen
+bindsym Mod4+f exec fullscreen_toggle
+bindsym Mod4+t exec SLIM=t fullscreen_toggle
+bindsym alt+Tab  focus prev
+bindsym alt+shift+Tab  focus next
+bindsym Mod4+Tab  focus prev
+bindsym Mod4+shift+Tab  focus next
+bindsym Mod4+1  workspace 1
+bindsym Mod4+2  workspace 2
+bindsym Mod4+3  workspace 3
+bindsym Mod4+4  workspace 4
+bindsym Mod4+5  workspace 5
+bindsym Mod4+6  workspace 6
+bindsym Mod4+7  workspace 7
+bindsym Mod4+8  workspace 8
+bindsym Mod4+9  workspace 9
+bindsym Mod4+shift+1  move container to workspace 1
+bindsym Mod4+shift+2  move container to workspace 2
+bindsym Mod4+shift+3  move container to workspace 3
+bindsym Mod4+shift+4  move container to workspace 4
+bindsym Mod4+shift+5  move container to workspace 5
+bindsym Mod4+shift+6  move container to workspace 6
+bindsym Mod4+shift+7  move container to workspace 7
+bindsym Mod4+shift+8  move container to workspace 8
+bindsym Mod4+shift+9  move container to workspace 9
+bindsym Mod4+h exec focus.sh left
+bindsym Mod4+n exec focus.sh down
+bindsym Mod4+e exec focus.sh up
+bindsym Mod4+l exec focus.sh right
+bindsym Mod4+shift+h exec move.sh left
+bindsym Mod4+shift+n exec move.sh down
+bindsym Mod4+shift+e exec move.sh up
+bindsym Mod4+shift+l exec move.sh right
+bindsym Mod4+alt+h exec resize.sh left
+bindsym Mod4+alt+n exec resize.sh down
+bindsym Mod4+alt+e exec resize.sh up
+bindsym Mod4+alt+l exec resize.sh right
+bindsym Mod4+ctrl+h exec presel.sh left
+bindsym Mod4+ctrl+n exec presel.sh down
+bindsym Mod4+ctrl+e exec presel.sh up
+bindsym Mod4+ctrl+l exec presel.sh right
+bindsym Mod4+Left exec focus.sh left
+bindsym Mod4+Down exec focus.sh down
+bindsym Mod4+Up exec focus.sh up
+bindsym Mod4+Right exec focus.sh right
+bindsym Mod4+shift+Left exec move.sh left
+bindsym Mod4+shift+Down exec move.sh down
+bindsym Mod4+shift+Up exec move.sh up
+bindsym Mod4+shift+Right exec move.sh right
+bindsym Mod4+alt+Left exec resize.sh left
+bindsym Mod4+alt+Down exec resize.sh down
+bindsym Mod4+alt+Up exec resize.sh up
+bindsym Mod4+alt+Right exec resize.sh right
+bindsym Mod4+ctrl+Left exec presel.sh left
+bindsym Mod4+ctrl+Down exec presel.sh down
+bindsym Mod4+ctrl+Up exec presel.sh up
+bindsym Mod4+ctrl+Right exec presel.sh right
+bindsym Mod4+ctrl+space  layout
+bindsym Mod4+y exec dismiss.sh
+bindsym Mod4+Return exec elisp '(ns/spawn-terminal)' || xst
+bindsym Mod4+shift+Return exec elisp '(ns/org-capture-popup)'
+bindsym Mod4+i exec jump_emacs
+bindsym Mod4+o exec qb_meta_open
+bindsym Mod4+shift+o exec qutebrowser
+bindsym F8 exec utf8
+bindsym Mod4+shift+q exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+bindsym XF86AudioPrev exec player.sh prev
+bindsym XF86AudioNext exec player.sh next
+bindsym XF86AudioPlay exec player.sh toggle
+bindsym XF86AudioLowerVolume exec direction=decrease && notify-send --urgency=low Volume: $(ponymix $direction)
+bindsym XF86AudioRaiseVolume exec direction=increase && notify-send --urgency=low Volume: $(ponymix $direction)
+bindsym Mod4+space exec action=switcher && dmenu_$action "$action"
+bindsym Mod4+shift+space exec action=run && dmenu_$action "$action"
+bindsym Mod4+alt+space exec action=pass && dmenu_$action "$action"
+bindsym Mod4+grave exec player.sh toggle
+bindsym XF86AudioMute exec ponymix toggle
+bindsym Mod4+minus exec x=decrease && notify-send --urgency=low "Volume: $(ponymix $x 5)"
+bindsym Mod4+equal exec x=increase && notify-send --urgency=low "Volume: $(ponymix $x 5)"
+bindsym Mod4+p  focus parent
+bindsym Mod4+period  focus child
