--- a/macos/.skhdrc
+++ b/macos/.skhdrc
@@ -78,23 +78,26 @@
 
 # TODO: generate some of this. see the sxhkd-ish post.
 
+# note: I'm swapping stuff -- control is command and command is control
+# that level of binding seems to be 'above' skdhrc, so the names will be flipped here
+
 # focus window
-cmd - l : ~/.wm/scripts/interact/focus_mac.sh east
-cmd - h : ~/.wm/scripts/interact/focus_mac.sh west
-cmd - n : ~/.wm/scripts/interact/focus_mac.sh south
-cmd - e : ~/.wm/scripts/interact/focus_mac.sh north
+ctrl - l : ~/.wm/scripts/interact/focus_mac.sh east
+ctrl - h : ~/.wm/scripts/interact/focus_mac.sh west
+ctrl - n : ~/.wm/scripts/interact/focus_mac.sh south
+ctrl - e : ~/.wm/scripts/interact/focus_mac.sh north
 
 # swap managed window
-shift + cmd - l : yabai -m window --swap east
-shift + cmd - h : yabai -m window --swap west
-shift + cmd - n : yabai -m window --swap south
-shift + cmd - e : yabai -m window --swap north
+shift + ctrl - l : yabai -m window --swap east
+shift + ctrl - h : yabai -m window --swap west
+shift + ctrl - n : yabai -m window --swap south
+shift + ctrl - e : yabai -m window --swap north
 
 # todo: what is warp
 # shift + cmd - h : yabai -m window --warp east
 
 # balance size of windows
-# shift + alt - 0 : yabai -m space --balance
+# shift + cmd - semicolon : yabai -m space --balance
 
 # make floating window fill screen
 # shift + alt - up     : yabai -m window --grid 1:1:0:0:1:1
@@ -113,22 +116,26 @@ shift + cmd - e : yabai -m window --swap north
 # cmd + alt - 1 : yabai -m space --focus 1
 
 # send window to desktop and follow focus
-# shift + cmd - z : yabai -m window --space next; yabai -m space --focus next
-# shift + cmd - 2 : yabai -m window --space  2; yabai -m space --focus 2
-cmd - 1 : yabai -m space --focus 1
-cmd - 2 : yabai -m space --focus 2
+ctrl + shift - 1 : yabai -m window --space 1
+ctrl + shift - 2 : yabai -m window --space 2
+ctrl + shift - 3 : yabai -m window --space 3
+ctrl + shift - 4 : yabai -m window --space 4
 
-# focus monitor
-# ctrl + alt - z  : yabai -m display --focus prev
-# ctrl + alt - 3  : yabai -m display --focus 3
+ctrl - 1 : yabai -m space --focus 1
+ctrl - 2 : yabai -m space --focus 2
+ctrl - 3 : yabai -m space --focus 3
+ctrl - 4 : yabai -m space --focus 4
 
-# send window to monitor and follow focus
-# ctrl + cmd - c  : yabai -m window --display next; yabai -m display --focus next
-# ctrl + cmd - 1  : yabai -m window --display 1; yabai -m display --focus 1
+ctrl - return : ~/bin/elisp '(ns/spawn-terminal)' || $TERMINAL
 
 # move floating window
 # shift + ctrl - a : yabai -m window --move rel:-20:0
 # shift + ctrl - s : yabai -m window --move rel:0:20
+
+alt + ctrl - l : ~/.wm/scripts/interact/resize_mac.sh east
+alt + ctrl - h : ~/.wm/scripts/interact/resize_mac.sh west
+alt + ctrl - n : ~/.wm/scripts/interact/resize_mac.sh south
+alt + ctrl - e : ~/.wm/scripts/interact/resize_mac.sh north
 
 # increase window size
 # shift + alt - a : yabai -m window --resize left:-20:0
@@ -142,15 +149,21 @@ cmd - 2 : yabai -m space --focus 2
 # ctrl + alt - h : yabai -m window --insert west
 
 # toggle window zoom
-# alt - d : yabai -m window --toggle zoom-parent
-# alt - f : yabai -m window --toggle zoom-fullscreen
+# ctrl - d : yabai -m window --toggle zoom-parent
+# ctrl - f : yabai -m window --toggle native-fullscreen
+ctrl - f : yabai -m window --toggle zoom-fullscreen
+ctrl - w : yabai -m window --close
+
+
+# this never finds a window 
+# ctrl - tab : yabai -m window --focus next
 
 # toggle window split type
 # alt - e : yabai -m window --toggle split
 
 # float / unfloat window and center on screen
-# alt - t : yabai -m window --toggle float;\
-#           yabai -m window --grid 4:4:1:1:2:2
+# note: grid won't apply on a tiled window
+ctrl - s : yabai -m window --toggle float; yabai -m window --grid 4:4:1:1:2:2
 
 # toggle sticky(+float), topmost, picture-in-picture
 # alt - p : yabai -m window --toggle sticky;\
