--- a/macos/.yabairc
+++ b/macos/.yabairc
@@ -16,32 +16,31 @@
 
 # global settings
 yabai -m config mouse_follows_focus          off
-yabai -m config focus_follows_mouse          on
+yabai -m config focus_follows_mouse          autoraise
 yabai -m config window_placement             second_child
 
 yabai -m config window_topmost               off
-
 yabai -m config window_shadow                off
 yabai -m config window_opacity               off
 
 yabai -m config window_border                on
-yabai -m config window_border_width          6
+yabai -m config window_border_width          4
 
-yabai -m config active_window_border_color   0xffeeeeee
-yabai -m config normal_window_border_color   0xff555555
+yabai -m config active_window_border_color   0xff4b4e4f
+yabai -m config normal_window_border_color   0xffcecccd
 yabai -m config insert_feedback_color        0xff0000dd
 
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
 
 # todo later: tryout cmd as the mouse modifier
-yabai -m config mouse_modifier               fn
+yabai -m config mouse_modifier               ctrl
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 yabai -m config mouse_drop_action            swap
 
 # general space settings
-gap=6
+gap=8
 yabai -m config layout                       bsp
 yabai -m config top_padding                  $gap
 yabai -m config bottom_padding               $gap
@@ -50,29 +49,12 @@ yabai -m config right_padding                $gap
 yabai -m config window_gap                   $gap
 
 # create desktops:
-yabai -m space --create 2
+if [ "$(yabai -m query --spaces | jq 'length')" -lt 5 ]; then
+    for i in $(seq 3); do
+	yabai -m space --create
+    done
+fi
 
-# {
-#       focus_follows_mouse          = "autoraise";
-#       mouse_follows_focus          = "off";
-#       window_placement             = "second_child";
-#       window_opacity               = "off";
-#       window_opacity_duration      = "0.0";
-#       window_topmost               = "on";
-#       window_shadow                = "float";
-#       active_window_opacity        = "1.0";
-#       normal_window_opacity        = "1.0";
-#       split_ratio                  = "0.50";
-#       auto_balance                 = "on";
-#       mouse_modifier               = "fn";
-#       mouse_action1                = "move";
-#       mouse_action2                = "resize";
-#       layout                       = "bsp";
-#       top_padding                  = 36;
-#       bottom_padding               = 10;
-#       left_padding                 = 10;
-#       right_padding                = 10;
-#       window_gap                   = 10;
-#     }
+yabai -m space 4 --layout float
 
 yabai -m rule --add app='System Preferences' manage=off
